--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -212,8 +212,8 @@ We utilize both theoretical and computational tools to understand the nature of 
 % \Include{Introduction}
 
 % \Include{Theory}
-% \Include{Rashba}
-\Include{GdMn2O5}
+\Include{Rashba}
+% \Include{GdMn2O5}
 % \Include{Cr}
 
 % \Include{Softening}
