fixed front page

--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -66,17 +66,17 @@ This means that the electrical behavior of this material is almost impervious to
 \\\\
 In an effort to improve this sought-after control, we turn to the type-II multiferroics.
 As mentioned before, the ferroelectricity in these materials is a result of the inversion breaking magnetic order that sets in below $T_N$.
-Due to the shared microscopic origin, the coupling between the magnetic and ferroelectric orders in these materials is generally much higher, leading to an increased magnetoelectric effect~\cite{Oh2014}.
+Due to the shared microscopic origin, the coupling between the magnetic and ferroelectric orders in these materials is generally much higher, leading to an increased magnetoelectric effect~\cite{Oh2014,Radaelli08Y}.
 However, one caveat is that in this case the ferroelectric polarization is much lower, since the associated distortions are a result of the force due to the weak magnetoelectric coupling\footnote{The order parameter describing the ferroelectric polarization is a pure slave order parameter, that would not develop on its own in these materials. It is only nonzero because of the appearance of the primary order parameter that describes the magnetic order below $T_N$ (i.e. there is no $T_{FE}$).}.
 This leads to a much reduced effectiveness of external electric fields as a method of effective control of the magnetic order.  
 \\\\
 Here, we specifically focus on GdMn$_2$O$_5$ (see Fig.~\ref{fig:GdMn2O5_unit_cell})~\cite{Khomskii2009} that demonstrates an exceptional tunability of the ferroelectric polarization through an applied magnetic field~\cite{Lee13}.
-The orthorhombic $R$Mn$_2$O$_5$ manganites have a very complex crystalline structure (see Fig.~\ref{fig:GdMn2O5_unit_cell}), which leads to a wealth of different phases depending on the temperature, rare-earth ion $R$, external magnetic field and even electric-field poling history~\cite{Zheng2019}.
+The orthorhombic $R$Mn$_2$O$_5$ manganites have a very complex crystalline structure (see Fig.~\ref{fig:GdMn2O5_unit_cell}), which leads to a wealth of different phases depending on the temperature, rare-earth ion $R$, external magnetic field and even electric-field poling history~\cite{Chapon04, Chapon06, Blake05, Radaelli09,Radaelli08, Zheng2019}.
 To keep the discussion tractable and in line with the experiments that were performed by our collaborators, we give a summary of the transitions and phases that are important for this chapter.
 \\\\
 $R$Mn$_2$O$_5$ have crystallographic group P$bam$ \cite{Alonso97} in the paramagnetic phase at high temperature, which is eventually lowered to P$_ab2_1a$ when the commensurate magnetic order condenses below $T_{N} \approx 33$ K.
 This order is characterized by the propagation vector $\bm{k} = (1/2, 0, 0)$, i.e. there is a unit cell doubling along the crystalline $a$-direction.
-The magnetic configuration repeats along the crystalline $c$-direction. The magnetic phase transition goes hand in hand with a sharp anomaly in the dielectric constant $\varepsilon_b$, signaling the onset of the improper ferroelectric polarization  along the $b$-direction ($P_b$) \cite{Lee13}.
+The magnetic configuration repeats along the crystalline $c$-direction. The magnetic phase transition goes hand in hand with a sharp anomaly in the dielectric constant $\varepsilon_b$, signaling the onset of the improper ferroelectric polarization  along the $b$-direction ($P_b$) \cite{Vecchini08,Lee13,Vecchini14}.
 When the temperature is lowered further, $P_b$ saturates to a maximum value of around 3600 $\mu$C/m$^2$, the largest found for any rare-earth manganite.
 However, it is still tiny compared to proper ferroelectrics like BaTiO$_3$ with $P \approx 3 \times 10^5 \mu $C/m$^2$ at room temperature \cite{Mason1948,VonHippel1950}.
 The magnetic unit cell is traversed by two antiferromagnetic (AFM) Mn chains, which are formed by pyramidally coordinated Mn$^{3+}$ and octahedrally coordinated Mn$^{4+}$ ions, as indicated by the light blue lines and purple polygons in Fig.~\ref{fig:GdMn2O5_unit_cell}.
@@ -642,5 +642,5 @@ The robust unidirectional spin rotation originates from the asymmetric evolution
 This is a microscopic analogue to the crankshaft in a car, transforming linear back-and-forth motion of the applied magnetic field (the piston) into circular motion of the spins (crankshaft).
 Due to different behavior of the two chains in GdMn$_2$O$_5$, i.e. one doing a full-circle rotation while the other toggles, the double sweep of the magnetic field is accompanied by two reversals of the electric polarization.
 %
-Combined with the coupling of this soft magnetic mode to the electric polarization, a degree of electric control over the magnetic configuration may be possible~\cite{Oh14}.
+Combined with the coupling of this soft magnetic mode to the electric polarization, a degree of electric control over the magnetic configuration may be possible~\cite{Radaelli08Y,Oh14}.
 One could envision a theoretical application of this behavior as an electric counter of magnetic field pulses.
