--- a/papers/references.bib
+++ b/papers/references.bib
@@ -297,7 +297,6 @@ year = {1999}
 
 @article{Vecchini14,
 	url = {http://dx.doi.org/10.1088/1742-6596/519/1/012004},
-	url = {https://doi.org/10.1088%2F1742-6596%2F519%2F1%2F012004},
 	year = 2014,
 	month = {may},
 	publisher = {{IOP} Publishing},
@@ -437,7 +436,7 @@ year = {1999}
   Pages                    = {214402},
   Volume                   = {71},
   Year                     = {2005},
-  Doi                      = {10.1103/PhysRevB.71.214402}
+  url                      = {http://dx.doi.org/10.1103/PhysRevB.71.214402}
 }
 
 @Article{Bodenthin08,
@@ -502,7 +501,7 @@ year = {1999}
   Pages                    = {097601},
   Volume                   = {96},
   Year                     = {2006},
-  Doi                      = {10.1103/PhysRevLett.96.097601}
+  url                      = {http://dx.doi.org/10.1103/PhysRevLett.96.097601}
 }
 
 @Article{Chapon04,
@@ -512,7 +511,7 @@ year = {1999}
   Pages                    = {177402},
   Volume                   = {93},
   Year                     = {2004},
-  Doi                      = {10.1103/PhysRevLett.93.177402}
+  url                      = {http://dx.doi.org/10.1103/PhysRevLett.93.177402}
 }
 
 @Article{Chatterji2014,
@@ -1387,7 +1386,7 @@ Pages                    = {057201},
   Pages                    = {067205},
   Volume                   = {101},
   Year                     = {2008},
-  Doi                      = {10.1103/PhysRevLett.101.067205}
+  url                      = {http://dx.doi.org/10.1103/PhysRevLett.101.067205}
 }
 
 @Article{Radaelli08,
@@ -1397,7 +1396,7 @@ Pages                    = {057201},
   Pages                    = {434213},
   Volume                   = {20},
   Year                     = {2008},
-  Doi                      = {10.1088/0953-8984/20/43/434213}
+  url                      = {http://dx.doi.org/10.1088/0953-8984/20/43/434213}
 }
 
 @Article{Radaelli09,
