--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -631,16 +631,36 @@ as a minimal model that still demonstrates the crankshaft-like behavior.
 \end{figure}
 
 \section{Conclusions}
-We used a relatively general and simple, quasi-classical spin model in order to describe a never before observed four-state switching loop in GdMn$_2$O$_5$.
-The model reproduces the experimental measurements well, and from further analysis it leads to the conclusion that this behavior is topologically protected by the presence of two, more normal, two-state magnetoelectric switching regimes.
-While we devised a set of model parameters to reproduce the behavior in GdMn$_2$O$_5$, it turns out that a wide set of model parameters can generate the same behavior.
-Furthermore, due to the topological nature of the effect, we posit that the screening for further materials exhibiting a similar behavior would be relatively simple since only high and low angle regimes need to be identified.
-The magic angle boundary region will then necessarily exist at an intermediate angle.
+We have examined the very peculiar and novel magnetoelectric switching behavior in GdMn$_2$O$_5$, a hallmark multiferroic system.
+Based on the incredible experimental observations performed by our collaborators in A. Pimenov's group, we have constructed a semi-classical spin model in an attempt to reproduce the behavior.
+Not only was this attempt very succesful in mimicking the experimental observations, it also allowed us to gain deeper insight into what causes the effect.
+\\\\
+We identified three separate polarization switching regimes that occur for different values of the angle $\phi_H$ that the applied magnetic field makes with the $a$ axis of the crystal.
+Accordingly, we termed these the low angle, high angle, and magic angle switching regimes, the latter fully deserving its designation due to the novel four state double hysteresis loop that it leads to.
+The magnetoelectric switching is fully deterministic in each regime, hinting at the energetics as the source for this behavior.
+Using a semi-classical effective spin Hamiltonian in terms of the Gd spins, and the AFM order parameters $\bm L_\alpha$ that describe the Mn chains, we were able to unravel the characteristics of the system.
+This physics is a prime example of the often recurring theme in condensed matter, where a combination of relatively simple terms in the Hamiltonian can lead to very interesting and unexpected emergent phenomena.
+\\\\
+Since the four state switching regime at the magic angle is the most novel, we focused much of our effort on understanding its underlying mechanism. Extrapolating the gained knowledge we were then able to rationalize the behavior of the low and high angle regimes as well.
 
-We also found that the novel four-state regime comes together with a unique large-amplitude collective mode -- the full-circle rotation of half the spins.
-The robust unidirectional spin rotation originates from the asymmetric evolution of the energy landscape, and corresponds to an in-contractible loop in the order parameter space, ultimately leading to the topological nature of the switching in this material.
-This is a microscopic analogue to the crankshaft in a car, transforming linear back-and-forth motion of the applied magnetic field (the piston) into circular motion of the spins (crankshaft).
-Due to different behavior of the two chains in GdMn$_2$O$_5$, i.e. one doing a full-circle rotation while the other toggles, the double sweep of the magnetic field is accompanied by two reversals of the electric polarization.
-%
-Combined with the coupling of this soft magnetic mode to the electric polarization, a degree of electric control over the magnetic configuration may be possible~\cite{Radaelli08Y,Oh14}.
-One could envision a theoretical application of this behavior as an electric counter of magnetic field pulses.
+Focusing first on the evolution of the energy landscape of the model in Fig.~\ref{fig:GdMn2O5_heatmap}, we understood that the trajectory of the system through the four states is not only described by the variation of their energy minima, but that a crucial role is played by the energy barriers between them.
+We verified this by performing Nudged Elastic Band calculations that describe how the barriers between the four states evolve as a function of the applied field strength (see Fig.~\ref{fig:GdMn2O5_neb}), fully uncovering the mechanism behind the unidirectional trajectory through the energy landscape.
+The main observation is that the barriers between neighboring states are not related by symmetry and are thus allowed to evolve asymmetrically, a fact confirmed by the different magnetizations of the barrier states.
+\\\\
+We then turned our attention to the behavior of the spins associated with the effective model. Incredibly, we found that the undirectional cycling of the four state regime is reflected in the full 360$^\circ$ rotation of half the spins by increments close to 90$^\circ$ (see Fig.~\ref{fig:GdMn2O5_regimes} for a summary of all switching regimes).
+This is a microscopic analogue to the crankshaft in a car, transforming linear back--and--forth motion of the applied magnetic field (the piston) into circular motion of the spins (crankshaft).
+Since the polarization in these materials is a direct result of the magnetic configuration, we managed to link the uncovered spin behavior directly to the observations of the magnetoelectric switching measurements.
+\\\\
+Moreover, by realizing how the magic angle switching regime appears as a boundary between the low and high angle regimes, and by studying the difference in their trajectories through the energy landscape, we identified the topological nature of the switching behavior.
+We then defined a topological winding number to the spin rotations which is 0 for the two state switching regimes (low and high angle), and 1 for the four state switching regime.
+In order to verify the generality and robustness of this topological behavior, we performed simulations with varied model parameters, demonstrating its existence in a wide range of cases (see Fig.~\ref{fig:GdMn2O5_windingvsparam}).
+\\\\
+Combining all our observations, we concluded by attempting an intuitive explanation of the switching from a microscopic point of view, comparing the behavior of the spins in GdMn$_2$O$_5$ to the well-known spin-flop transition.
+However, there remain many unanswered questions w.r.t the switching behavior in GdMn$_2$O$_5$, mainly concerning the influence of domains, and what leads to the details of the polarization curves in Fig.~\ref{fig:GdMn2O5_experiment1}.
+\\\\
+We conclude with some speculations on the technological applicability of this magnificent behavior.
+First, the clearest similarity is with a binary counter, where GdMn$_2$O$_5$ could be a single crystal analogue where the two polarization states denote either a 0 or 1 bit.
+It could then be trivially used as a binary counter for magnetic field pulses.
+Second, the flatness of the energy surface close to the switching field could open the door to a degree of electric control over the magnetic configuration~\cite{Radaelli08Y,Oh14}.
+This could then be utilized in storage devices that store the data magnetically, but read and write it electrically.
+The main limiting factor is the exceedingly low temperature that is required to observe these effects (see Fig.~\ref{fig:GdMn2O5_experiment2}(c)).
