--- a/papers/Cr/Cr.tex
+++ b/papers/Cr/Cr.tex
@@ -1,4 +1,4 @@
-\chapter{Coupling between spin and strain density waves \label{ch:CrSDW}}
+\chapter{Coupling between spin and lattice in Chromium \label{ch:CrSDW}}
 \section{Introduction}
 In all previous chapters, we discussed situations for which the order parameters were static, or at least at instantaneous equilibrium.
 For GeTe, the polarization and resulting spin splitting were fixed.
