--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -542,7 +542,7 @@ In the four-state regime in Fig.~\ref{fig:GdMn2O5_theory}(e), as we have seen, t
 In this case, the path can not be fully contracted in the same way which highlights its {\em  topologically distinct} nature compared to the other two regimes.
 Indeed, for such trajectories in the two-dimensional $(\phi_{\rm L1},\phi_{\rm L2})$ space with a torus topology, we can define a winding number $Q$ as:
 \begin{equation}
-Q=\frac{1}{2\pi}\int_0^{t_0} dt (L_1^x\partial_t L_1^y - L_1^y \partial_t L_1^x) + (L_2^y\partial_t L_2^x - L_2^x \partial_t L_2^y),
+Q=\frac{1}{2\pi}\int_0^{t_0} dt (L_1^x\partial_t L_1^y - L_1^y \partial_t L_1^x) - (L_2^x\partial_t L_2^y - L_2^y \partial_t L_2^x),
 \end{equation}
 where the integral is taken over the time interval, $t_0$, during which the magnetic field is ramped up and down twice and the system is returned to its initial state.
 In the two state switching regimes, $Q  = 0$, whereas for the four state switching, $Q = 1$.
@@ -656,7 +656,7 @@ We then defined a topological winding number to the spin rotations which is 0 fo
 In order to verify the generality and robustness of this topological behavior, we performed simulations with varied model parameters, demonstrating its existence in a wide range of cases (see Fig.~\ref{fig:GdMn2O5_windingvsparam}).
 \\\\
 Combining all our observations, we concluded by attempting an intuitive explanation of the switching from a microscopic point of view, comparing the behavior of the spins in GdMn$_2$O$_5$ to the well-known spin-flop transition.
-However, there remain many unanswered questions w.r.t the switching behavior in GdMn$_2$O$_5$, mainly concerning the influence of domains, and what leads to the details of the polarization curves in Fig.~\ref{fig:GdMn2O5_experiment1}.
+While our investigation explained the lion's share of the observed magnetoelectric switching behavior in GdMn$_2$O$_5$, there remain some unanswered questions, mainly concerning the influence of domains, and what leads to the smaller jumps of the polarization curves in Fig.~\ref{fig:GdMn2O5_experiment1}.
 \\\\
 We conclude with some speculations on the technological applicability of this magnificent behavior.
 First, the clearest similarity is with a binary counter, where GdMn$_2$O$_5$ could be a single crystal analogue where the two polarization states denote either a 0 or 1 bit.
