--- a/papers/references.bib
+++ b/papers/references.bib
@@ -6803,3 +6803,16 @@ volume = {516},
 year = {2014}
 }
 
+@article{Born1927,
+author = {Born, M. and Oppenheimer, R.},
+doi = {10.1002/andp.19273892002},
+issn = {00033804},
+journal = {Annalen der Physik},
+number = {20},
+pages = {457--484},
+title = {{Zur Quantentheorie der Molekeln}},
+url = {http://doi.wiley.com/10.1002/andp.19273892002},
+volume = {389},
+year = {1927}
+}
+
