--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -209,14 +209,16 @@ We utilize both theoretical and computational tools to understand the nature of 
 \setcounter{tocdepth}{1}
 \tableofcontents
 \mainmatter
-% \Include{Introduction}
+\Include{Introduction}
 
-% \Include{Theory}
-% \Include{Rashba}
+\Include{Rashba}
 \Include{GdMn2O5}
-% \Include{Cr}
+\Include{Cr}
 
-% \Include{Softening}
+\Include{Softening}
+\appendix
+\Include{DFT}
+\Include{Wannier}
 \backmatter
 \bibliography{references}
 \printindex
