--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -211,14 +211,14 @@ We utilize both theoretical and computational tools to understand the nature of 
 \mainmatter
 \Include{Introduction}
 
-\Include{Rashba}
-\Include{GdMn2O5}
-\Include{Cr}
+% \Include{Rashba}
+% \Include{GdMn2O5}
+% \Include{Cr}
 
-\Include{Softening}
-\appendix
-\Include{DFT}
-\Include{Wannier}
+% \Include{Softening}
+% \appendix
+% \Include{DFT}
+% \Include{Wannier}
 \backmatter
 \bibliography{references}
 \printindex
